--- a/form-request.html
+++ b/form-request.html
@@ -156,16 +156,15 @@ button[type="submit"]:hover {
   </form>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/locale/id.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
 const scriptURL = "https://script.google.com/macros/s/AKfycbzR5rqC-ll3MheqTzwP9CGchyfkOWM04qdUt7h565ty9J7gd4hSfH7ui2pwItInxCUPBQ/exec";
 const quotaURL = scriptURL;
 const MAX_KUOTA_HARIAN = 21;
 
-// === Nama Bulan ===
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
 
-// === Header Otomatis Bulan Depan ===
+// === Header Bulan Depan ===
 (function updateHeader() {
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
@@ -175,13 +174,13 @@ const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Ag
   document.getElementById('page-title').textContent = headerText;
 })();
 
-// === Ambil data dari URL (NIK, NAMA, GROUP) ===
+// === Ambil data dari URL ===
 const params = new URLSearchParams(window.location.search);
 document.getElementById("nik").value = params.get("nik") || "";
 document.getElementById("nama").value = params.get("nama") || "";
 document.getElementById("group").value = params.get("group") || "";
 
-// === Fetch tanggal penuh ===
+// === Ambil data kuota & inisialisasi kalender ===
 async function fetchFullDays() {
   try {
     const response = await fetch(quotaURL);
@@ -193,21 +192,34 @@ async function fetchFullDays() {
   }
 }
 
-// === Inisialisasi kalender ===
 function initDatepicker(selector, disabledDays) {
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
   const disabledDates = disabledDays.map(day => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), parseInt(day)));
+
+  if (document.querySelector(selector).datepicker) document.querySelector(selector).datepicker.destroy();
 
   new AirDatepicker(selector, {
     multipleDates: true,
     multipleDatesSeparator: ', ',
     dateFormat: 'd-MM',
     disabledDates: disabledDates,
+    locale: {
+      days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
+      daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
+      daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'],
+      months: monthNames,
+      monthsShort: monthNames.map(m => m.substring(0, 3)),
+      today: 'Hari Ini',
+      clear: 'Bersihkan',
+      dateFormat: 'dd/MM/yyyy',
+      firstDay: 1
+    },
     startDate: nextMonth,
     minDate: nextMonth,
     maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth() + 1, 0),
-    locale: AirDatepicker.locales.id
+    position: 'bottom left',
+    readOnly: true
   });
 }
 
@@ -218,23 +230,32 @@ async function initializeApp() {
 }
 initializeApp();
 
-// === Countdown otomatis per bulan ===
+// === Countdown Otomatis Tiap Bulan ===
 function startCountdown() {
+  const now = new Date();
+  const openDate = new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0);   // buka tgl 1 jam 00:10
+  const closeDate = new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59); // tutup tgl 16 jam 23:59
+  const nextMonthOpen = new Date(now.getFullYear(), now.getMonth() + 1, 1, 0, 10, 0);
   const countdownEl = document.getElementById("countdown");
   const form = document.getElementById("requestForm");
+  const submitBtn = document.getElementById("submitBtn");
 
   function updateCountdown() {
-    const now = new Date();
-    const openDate = new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0);
-    const closeDate = new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59);
-    const nextMonthOpen = new Date(now.getFullYear(), now.getMonth() + 1, 1, 0, 10, 0);
-
+    const current = new Date();
     let target, mode;
-    if (now < openDate) { target = openDate; mode = "belum buka"; }
-    else if (now <= closeDate) { target = closeDate; mode = "buka"; }
-    else { target = nextMonthOpen; mode = "tutup"; }
 
-    const diff = target - now;
+    if (current < openDate) {
+      target = openDate;
+      mode = "belum buka";
+    } else if (current >= openDate && current <= closeDate) {
+      target = closeDate;
+      mode = "buka";
+    } else {
+      target = nextMonthOpen;
+      mode = "tutup";
+    }
+
+    const diff = target - current;
     const days = Math.floor(diff / (1000 * 60 * 60 * 24));
     const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
     const mins = Math.floor((diff / (1000 * 60)) % 60);
@@ -244,7 +265,7 @@ function startCountdown() {
       countdownEl.textContent = `⏳ Belum dibuka. Buka dalam: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
       form.querySelectorAll("input, select, button").forEach(el => el.disabled = true);
     } else if (mode === "buka") {
-      countdownEl.textContent = `Sisa waktu request ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
+      countdownEl.textContent = `Sisa waktu request: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
       form.querySelectorAll("input, select, button").forEach(el => el.disabled = false);
     } else {
       countdownEl.textContent = "⏰ Waktu request sudah berakhir. Tunggu periode berikutnya.";
@@ -257,7 +278,7 @@ function startCountdown() {
 }
 startCountdown();
 
-// === Kirim data ===
+// === Kirim Data ===
 document.getElementById("requestForm").addEventListener("submit", function(e){
   e.preventDefault();
   const status = document.getElementById("status");
@@ -268,8 +289,8 @@ document.getElementById("requestForm").addEventListener("submit", function(e){
   fetch(scriptURL, { method: "POST", body: formData })
     .then(res=>res.text())
     .then(resText=>{
-      if (resText.includes("Gagal: Kuota untuk tanggal")) {
-        const match = resText.match(/tanggal\s+([\d-]+)/);
+      if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
+        const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
         const blockedDay = match ? match[1] : "xx";
         status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${MAX_KUOTA_HARIAN}).`;
         status.className = "error";
@@ -278,16 +299,15 @@ document.getElementById("requestForm").addEventListener("submit", function(e){
         status.className = "success";
         setTimeout(initializeApp, 500);
       } else {
-        status.textContent = "❌ "+resText;
+        status.textContent = "❌ "+(resText.includes("Gagal") ? resText : "Gagal mengirim data!");
         status.className = "error";
       }
     })
     .catch(()=>{
-      status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App.";
+      status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
       status.className = "error";
     });
 });
 </script>
 </body>
 </html>
-
